Fix line spacing for headers

--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@ h2 {
   text-transform: uppercase;
   font-family: "Patua One", cursive;
   font-size: 1.5rem;
+  line-height: 1.5;
 }
 
 p {
